# CodexDesktop-Rebuild

./: .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  package.json  playwright.config.cjs  pnpm-lock.yaml  pnpm-workspace.yaml  signal-parity-map.md
.sisyphus/: boulder.json
.sisyphus/plans/: electron-to-tauri-rewrite.md
apps/desktop-tauri/: README.md
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: main.rs
crates/app-server-bridge/: Cargo.toml
crates/git-worker/: Cargo.toml
crates/host-api/: Cargo.toml
crates/state/: Cargo.toml
crates/terminal/: Cargo.toml
docs/: SOURCEMAP_ANALYSIS.md  signal-parity-map.md  tauri-architecture-decision.md  tauri-rewrite-progress.md  unfinished-signal-parity-map.md
docs/parity/: animations.json  approved-deltas.md  feature-contract.md  ipc-channels.json  opaque-bundles.json  pdf-worker.json  routes.json  rpc-mutations.json  rpc-queries.json  runtime-schemas.json  source-manifest.json  worker-git-methods.json
docs/rewrite/: 01-baseline-and-sources.md  02-runtime-host-parity.md  03-renderer-ui-animation-parity.md  04-validation-and-definition-of-done.md  05-cutover-and-risk-controls.md  architecture-contract-map.json  contract-sync.md  event-routing.md  route-migration-status.md  runtime-topology.md  state-parity.md  (+2 more)
scripts/: debug-harness-verify.js  debug-main-hook.js  debug-renderer-playwright.js  electron-debug-entry.js  patch-node-pty-spectre.js  rebuild-native.js  start-dev-debug.js
(+47 files in other folders)
