[workspace]
members = [
  "apps/desktop-tauri/src-tauri",
  "crates/host-api",
  "crates/app-server-bridge",
  "crates/git-worker",
  "crates/terminal",
  "crates/state",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
